# log_from_lib

./: CMakeLists.txt  README.md
src/: FakeBin.cpp  FakeLibClass.cpp  FakeLibClass.h  Log.cpp  Log.h
